--- a/movie-scrub/contact-page.html
+++ b/movie-scrub/contact-page.html
@@ -18,20 +18,15 @@
 
 <body>
 <header>
-    <img id="siteIcon" src="images/home-page/ms-logo-plus.png" alt="The site logo">
-    <!--<p>Contact Page | The Mountain Spoke</p>-->
-    <!--<span class="subheading">Mountain Spoke. Ride the earth!</span>-->
+
 </header>
 
 <!-- site navigation use placeholder references -->
 <nav class="clearfix">
     <button onclick="toggleNavMenu()">&#9776;</button>
     <ul id="toggleNav" class="hide container">
-        <li class="flexItem"><a href="index.html">Home</a></li>
-        <li class="flexItem"><a href="adventure-tours-page.html">Adventure Tours</a></li>
-        <li class="flexItem"><a href="event-page.html">Event Page</a></li>
-        <li class="flexItem"><a href="sales-page.html">Sales Page</a></li>
-        <li class="flexItem"><a href="service-page.html">Service Page</a></li>
+        <li class="flexItem"><a href="index.html">Dashboard</a></li>
+        <li class="flexItem"><a href="about-us.html">About Us</a></li>
         <li class="flexItem" id="active"><a href="#">Contact Page</a></li>
     </ul>
 </nav>
@@ -44,12 +39,12 @@
         </div>
         <div>
             <aside>
-            <h2>The Mountain Spoke</h2>
-            <p>Established: 1969</p>
-            <p>3950 Valley Commons Drive</p>
-            <p>Bozeman, MT 59715</p>
+            <h2>MovieScrub</h2>
+            <p>Established: 2019</p>
+            <p>5800 Orchard Drive</p>
+            <p>WDM, IA 50266</p>
             <p>999-999-9999</p>
-            <p>ride@mtnspoke.com</p>
+            <p>moviescrub@gmail.com</p>
             </aside>
         </div>
         <div>
@@ -71,8 +66,8 @@
 </main>
 
 <footer>
-    <p class="contact-info"><img id="siteIconMini" src="images/home-page/ms-logo.png" alt="The site logo"> <br>The Mountain Spoke <br> 3950 Valley Commons Drive<br> Bozeman, MT 59715 <br> 999-999-9999 <br> ride@mtnspoke.com</p>
-    <p class="footer-bar">&copy;2018 All Rights Reserved &nbsp | &nbsp <a href="reference-page.html" id="refPage">References Page</a> &nbsp | &nbsp <a href="video.html" id="overviewVid">Overview Video</a> &nbsp | &nbsp <span id="currentDate">Current Date Placeholder</span></p>
+    <p class="contact-info"><img id="siteIconMini" src="images/home-page/ms-logo.png" alt="The site logo"> <br>MovieScrub <br> 5800 Orchard Drive<br> WDM, IA 50266 <br> 999-999-9999 <br> moviescrub@gmail.com</p>
+    <p class="footer-bar">&copy;2019 All Rights Reserved &nbsp | &nbsp  <span id="currentDate">Current Date Placeholder</span></p>
 </footer>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/currentDate.js"></script>
