--- a/movie-scrub/contact-thanks.html
+++ b/movie-scrub/contact-thanks.html
@@ -26,7 +26,7 @@
     <button onclick="toggleNavMenu()">&#9776;</button>
     <ul id="toggleNav" class="hide container">
         <li class="flexItem"><a href="index.html">Home</a></li>
-        <li class="flexItem"><a href="adventure-tours-page.html">Adventure Tours</a></li>
+        <li class="flexItem"><a href="about-us.html">Adventure Tours</a></li>
         <li class="flexItem"><a href="event-page.html">Event Page</a></li>
         <li class="flexItem"><a href="sales-page.html">Sales Page</a></li>
         <li class="flexItem"><a href="service-page.html">Service Page</a></li>
