--- a/movie-scrub/index.html
+++ b/movie-scrub/index.html
@@ -33,7 +33,7 @@
 <main>
     <h1>Welcome MovieScrub!</h1>
 
-    <h3>Movie scrubbing made easy.</h3>
+    <h3>Movie screening made easy.</h3>
     <div class="wrapper">
 
 
