--- a/movie-scrub/about-us.html
+++ b/movie-scrub/about-us.html
@@ -39,10 +39,60 @@
     <div class="wrapper">
 
     </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </main>
 
+
 <footer>
-    <p class="contact-info"><img id="siteIconMini" src="images/home-page/ms-logo.png" alt="The site logo"> <br>MovieScrub <br> 5800 Orchard Drive<br> WDM, IA 50266 <br> 999-999-9999 <br> moviescrub@gmail.com</p>
+    <p class="contact-info"> <br>MovieScrub <br> 5800 Orchard Drive<br> WDM, IA 50266 <br> 999-999-9999 <br> moviescrub@gmail.com</p>
     <p class="footer-bar">&copy;2019 All Rights Reserved &nbsp | &nbsp  <span id="currentDate">Current Date Placeholder</span></p>
 </footer>
     <script src="scripts/hamburger.js"></script>
