--- a/movie-scrub/contact-page.html
+++ b/movie-scrub/contact-page.html
@@ -32,21 +32,9 @@
 </nav>
 
 <main>
-    <h1>Contact Page</h1>
+    <h1>MovieScrub</h1><br>
     <div class="wrapper">
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11151.589366681912!2d-111.0948422754889!3d45.6729611565185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5345459ab72cb6df%3A0xbb98968f9648ea88!2s3950+Valley+Commons+Dr%2C+Bozeman%2C+MT+59718!5e0!3m2!1sen!2sus!4v1522872281387" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-        <div>
-            <aside>
-            <h2>MovieScrub</h2>
-            <p>Established: 2019</p>
-            <p>5800 Orchard Drive</p>
-            <p>WDM, IA 50266</p>
-            <p>999-999-9999</p>
-            <p>moviescrub@gmail.com</p>
-            </aside>
-        </div>
+
         <div>
             <form action="contact-thanks.html" method="post" enctype="multipart/form-data" name="contact request" id="contactMe">
                     <fieldset>
@@ -63,10 +51,59 @@
             </form>
         </div>
     </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </main>
 
 <footer>
-    <p class="contact-info"><img id="siteIconMini" src="images/home-page/ms-logo.png" alt="The site logo"> <br>MovieScrub <br> 5800 Orchard Drive<br> WDM, IA 50266 <br> 999-999-9999 <br> moviescrub@gmail.com</p>
+    <p class="contact-info"> <br>MovieScrub <br> 5800 Orchard Drive<br> WDM, IA 50266 <br> 999-999-9999 <br> moviescrub@gmail.com</p>
     <p class="footer-bar">&copy;2019 All Rights Reserved &nbsp | &nbsp  <span id="currentDate">Current Date Placeholder</span></p>
 </footer>
     <script src="scripts/hamburger.js"></script>
