--- a/movie-scrub/contact-thanks.html
+++ b/movie-scrub/contact-thanks.html
@@ -18,7 +18,6 @@
 
 <body>
 <header>
-    <img id="siteIcon" src="images/home-page/ms-logo-plus.png" alt="The site logo">
 </header>
 
     <!-- site navigation use placeholder references -->
@@ -37,11 +36,59 @@
     <main>
     <h2>Thank You!</h2>
         <p class="push">Thanks for submitting your contact request. We greatly value your business! <br> Our service team will be in contact shortly.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </main>
 
 <footer>
-    <p class="contact-info"><img id="siteIconMini" src="images/home-page/ms-logo.png" alt="The site logo"> <br>The Mountain Spoke <br> 3950 Valley Commons Drive<br> Bozeman, MT 59715 <br> 999-999-9999 <br> ride@mtnspoke.com</p>
-    <p class="footer-bar">&copy;2018 All Rights Reserved &nbsp | &nbsp <a href="reference-page.html" id="refPage">References Page</a> &nbsp | &nbsp <a href="video.html" id="overviewVid">Overview Video</a> &nbsp | &nbsp <span id="currentDate">Current Date Placeholder</span></p>
+    <p class="contact-info"> <br>MovieScrub <br> 5800 Orchard Drive<br> WDM, IA 50266 <br> 999-999-9999 <br> moviescrub@gmail.com</p>
+    <p class="footer-bar">&copy;2019 All Rights Reserved &nbsp | &nbsp  <span id="currentDate">Current Date Placeholder</span></p>
 </footer>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/currentDate.js"></script>
