--- a/movie-scrub/index.html
+++ b/movie-scrub/index.html
@@ -34,16 +34,60 @@
     <h1>Welcome MovieScrub!</h1>
 
     <h3>Movie screening made easy.</h3>
-    <div class="wrapper">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-
-
-    </div>
 
 </main>
 
 <footer>
-    <p class="contact-info"><img id="siteIconMini" src="images/home-page/ms-logo.png" alt="The site logo"> <br>MovieScrub <br> 5800 Orchard Drive<br> WDM, IA 50266 <br> 999-999-9999 <br> moviescrub@gmail.com</p>
+    <p class="contact-info"> <br>MovieScrub <br> 5800 Orchard Drive<br> WDM, IA 50266 <br> 999-999-9999 <br> moviescrub@gmail.com</p>
     <p class="footer-bar">&copy;2019 All Rights Reserved &nbsp | &nbsp  <span id="currentDate">Current Date Placeholder</span></p>
 </footer>
     <script src="scripts/hamburger.js"></script>
